<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/lib/com.caexlogistics.postalapp.activities"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    android:layout_margin="@dimen/activity_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#E2E2E2"
    app:cardCornerRadius="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/list_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_letter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/lbl_pieza"
                    android:textSize="11sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/lblItemPiezaEntrega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="16AGO2504200033"
                    android:textSize="11sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_marginLeft="5dp"
                    android:text="@string/lbl_fecha"
                    android:textSize="11sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/lblItemFechaEntrega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="17/01/2017"
                    android:textSize="11sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/lbl_codCartero"
                    android:textSize="11sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/lblItemCarteroEntrega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="end"
                    android:text="AV0101"
                    android:textSize="11sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/lbl_ruta"
                    android:textSize="11sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/lblItemRutaEntrega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="Sergio Alvaro Rodriguez del valle"
                    android:textSize="11sp"
                    android:textStyle="italic" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>